# skanlite

./: CMakeLists.txt  ChangeLog  skanlite_0.6.orig.tar.bz2.delta  skanlite_0.6.orig.tar.bz2.id  skanlite_0.7.orig.tar.bz2.delta  skanlite_0.7.orig.tar.bz2.id  skanlite_0.8.orig.tar.bz2.delta  skanlite_0.8.orig.tar.bz2.id
debian/: changelog  control  copyright  rules  skanlite.1  skanlite.de.1  skanlite.install  skanlite.lintian-overrides  skanlite.manpages  source.lintian-overrides  watch
debian/patches/: add_upstream_changelog.patch  fix_FTBFS_png.patch  fix_ftbfs_gcc-4.5.patch  series
doc-translations/: CMakeLists.txt
doc-translations/de_skanlite/skanlite/: index.docbook
doc-translations/es_skanlite/skanlite/: index.docbook
doc-translations/et_skanlite/skanlite/: index.docbook
doc-translations/fr_skanlite/skanlite/: index.docbook
doc-translations/it_skanlite/skanlite/: index.docbook
doc-translations/nl_skanlite/skanlite/: index.docbook
doc-translations/pt_BR_skanlite/skanlite/: index.docbook
doc-translations/pt_skanlite/skanlite/: index.docbook
doc-translations/sv_skanlite/skanlite/: index.docbook
doc-translations/uk_skanlite/skanlite/: index.docbook
po/: CMakeLists.txt
po/be/: skanlite.po
po/bs/: skanlite.po
po/ca/: skanlite.po
po/ca@valencia/: skanlite.po
po/cs/: skanlite.po
po/da/: skanlite.po
po/de/: skanlite.po
po/el/: skanlite.po
po/en_GB/: skanlite.po
po/eo/: skanlite.po
po/es/: skanlite.po
po/et/: skanlite.po
po/eu/: skanlite.po
po/fi/: skanlite.po
po/fr/: skanlite.po
po/ga/: skanlite.po
(+33 files in other folders)
